# battinfo

./: Cargo.toml  LICENSE-MIT  README.md
src/: args.rs  lib.rs  main.rs
tests/: tests.rs
