[package]
name = "battinfo"
version = "0.1.1"
edition = "2024"
description = "A command-line tool for retrieving battery information, built using the excellent cross-platform `battery` crate."
authors = ["Dave Johnson <thisdavej@gmail.com>"]
license = "MIT"
repository = "https://github.com/thisdavej/battinfo"
readme = "README.md"
keywords = ["battery", "cli", "json"]

[dependencies]
argh = "0.1.13"
battery = "0.7.8"
human-time = "0.1.6"
serde_json = "1.0.139"
